working state in Backdrop 1.0 deleted Drupal files fixed module_implements session object bug

--- a/config/basic_cart_braintree.settings.json
+++ b/config/basic_cart_braintree.settings.json
@@ -25,6 +25,8 @@
     "basic_cart_braintree_county": "",
     "basic_cart_braintree_state": "",
     "basic_cart_braintree_zip": "",
+    "basic_cart_braintree_country": "",
+    "basic_cart_braintree_comment": "",
     "basic_cart_braintree_admin_emails": "",
     "basic_cart_braintree_admin_subject": "New order placed",
     "basic_cart_braintree_admin_message": "",
