incomplete subscription additions before weekend cleanup

--- a/config/basic_cart_plus.settings.json
+++ b/config/basic_cart_plus.settings.json
@@ -39,11 +39,23 @@
     "basic_cart_plus_admin_emails": "",
     "basic_cart_plus_admin_subject": "New order placed",
     "basic_cart_plus_admin_message": "",
-    "basic_cart_plus_send_user_message": 1,
+    "basic_cart_plus_send_user_message": "1",
     "basic_cart_plus_user_subject": "New order placed",
     "basic_cart_plus_user_message": "",
     "basic_cart_plus_thank_you_title": "",
     "basic_cart_plus_thank_you_message": "",
-    "basic_cart_plus_content_types": "",
-    "basic_cart_plus_paywall_price"
+    "basic_cart_plus_content_types": [],
+    "basic_cart_plus_paywall_price": "",
+    "basic_cart_plus_paywall_bronze_id": "",
+    "basic_cart_plus_paywall_silver_id": "",
+    "basic_cart_plus_paywall_gold_id": "",
+    "basic_cart_plus_paywall_bronze_name": "",
+    "basic_cart_plus_paywall_silver_name": "",
+    "basic_cart_plus_paywall_gold_name": "",
+    "basic_cart_plus_paywall_bronze_price": "",
+    "basic_cart_plus_paywall_silver_price": "",
+    "basic_cart_plus_paywall_gold_price": "",
+    "basic_cart_plus_paywall_bronze_currency": "",
+    "basic_cart_plus_paywall_silver_currency": "",
+    "basic_cart_plus_paywall_gold_currency": ""
 }
